--- a/hello-helidon-app.yaml
+++ b/hello-helidon-app.yaml
@@ -26,5 +26,5 @@ spec:
             spec:
               rules:
                 - paths:
-                    - path: "/greet"
+                    - path: "/help/allGreetings"
                       pathType: Prefix
