--- a/hello-helidon-comp.yaml
+++ b/hello-helidon-comp.yaml
@@ -21,7 +21,7 @@ spec:
         podSpec:
           containers:
             - name: hello-helidon-container
-              image: "ghcr.io/verrazzano/example-helidon-greet-app-v1:1.0.0-1-20211215184123-0a1b633"
+              image: "iad.ocir.io/apaccpt01/kwan/quickstart-mp-cicd:latest"
               ports:
                 - containerPort: 8080
                   name: http
