--- a/hello-helidon-app.yaml
+++ b/hello-helidon-app.yaml
@@ -28,7 +28,7 @@ spec:
                 spec:
                   rules:
                     - paths:
-                        - path: "/greet"
+                        - path: "/help/allGreetings"
                           pathType: Prefix
   placement:
     clusters:
