--- a/hello-helidon-comp.yaml
+++ b/hello-helidon-comp.yaml
@@ -26,4 +26,6 @@ spec:
               ports:
                 - containerPort: 8080
                   name: http
-
+      placement:
+        clusters:
+          - name: managed1
