--- a/hello-helidon-app.yaml
+++ b/hello-helidon-app.yaml
@@ -30,6 +30,11 @@ spec:
                     - paths:
                         - path: "/greet"
                           pathType: Prefix
+            - trait:
+                apiVersion: core.oam.dev/v1alpha2
+                kind: ManualScalerTrait
+                spec:
+                  replicaCount: 1
   placement:
     clusters:
       - name: managed1
