--- a/hello-helidon-comp.yaml
+++ b/hello-helidon-comp.yaml
@@ -21,7 +21,7 @@ spec:
         podSpec:
           containers:
             - name: hello-helidon-container
-              image: "iad.ocir.io/apaccpt01/kwan/quickstart-mp-cicd:IMAGEVERSION"
+              image: "iad.ocir.io/apaccpt01/kwan/quickstart-mp-cicd:latest"
               imagePullPolicy: Always
               ports:
                 - containerPort: 8080
